# emei

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: codegen.rs  gen_lemu_test.rs  page_addr.rs
src/: lib.rs  main.rs  page_manage.rs
src/insts/: inst_dump_buf.rs  mod.rs
src/insts/riscv/: inst_dump_buf.rs  isa_transform.rs  mod copy.rs  mod.rs  registers.rs  rv32a.rs  rv32c.rs  rv32fd.rs  rv32i.rs  rv32m.rs  untils.rs
src/insts/riscv/rv128/: mod.rs
src/insts/riscv/rv32/: a.rs  fd.rs  m.rs  mod.rs  rv32a.rs  rv32c.rs  rv32fd.rs  rv32i.rs  rv32m.rs
src/insts/riscv/rv64/: a.rs  fd.rs  m.rs  mod.rs  rv64i.rs
src/insts/x86_64/: inst_dump_buf.rs  inst_list.rs  mod.rs  registers.rs
src/test/: mod.rs
