[package]
name = "emei"
license = "GPL-3.0"
version = "0.2.3"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2021"
description = "The EMei JIT/AOT backend codegen framework."
repository = "https://github.com/imlyzh/emei"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libemei"
path = "src/lib.rs"


[dependencies]
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "memoryapi"] }